--- a/assisend/css/index.css
+++ b/assisend/css/index.css
@@ -32,3 +32,91 @@ body{
 	margin: auto;
 	width: 100%;
 }
+
+/* header */
+header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 100;
+}
+
+.nav{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 16px 0;
+}
+
+.logo{
+	font-size: 1.4rem;
+	font-weight: 700;
+	color: var(--text-color);
+	margin: 0px auto 0px 24px;
+}
+
+.logo span{
+	color: var(--main-color);
+}
+
+.menu-icon{
+	display: grid;
+	row-gap: 5px;
+	padding: 14px 12px;
+	background: var(--main-color);
+	cursor: pointer;
+	z-index: 200;
+	transform: 0.3s;
+}
+
+.menu-icon div{
+	display: block;
+	background: var(--bg-color);
+	height: 2px;
+	width: 25px;
+	transition: 0.3s;
+}
+
+.navbar{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(255, 255, 255, 0.74);
+	backdrop-filter: blur(4.5px);
+	z-index: 106;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	transition: 0.3s ease;
+}
+
+.navbar.action{
+	display: flex;
+}
+
+.navbar a{
+	padding: 20px;
+	font-size: 1.6rem;
+	color: var(--text-color);
+	font-weight: 500;
+	transition: 0.2s all linear;
+}
+
+.navbar a:hover{
+	background: var(--main-color);
+	font-size: 1.8rem;
+	color: var(--bg-color);
+}
+
+/* nav icons  */
+.nav-icons{
+	display: flex;
+	column-gap: 1rem;
+	z-index: 200;
+}
+
+
+
