--- a/assisend/css/index.css
+++ b/assisend/css/index.css
@@ -78,6 +78,18 @@ header{
 	transition: 0.3s;
 }
 
+.move .line1{
+	transform: rotate(45deg) translate(5px, 5px);	
+}
+
+.move .line2{
+	opacity: 0;	
+}
+
+.move .line3{
+	transform: rotate(-45deg) translate(5px, -5px);	
+}
+
 .navbar{
 	position: fixed;
 	left: 0;
